I creased email in the form

--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 
 <html lang="pt-br">
 	<head>
-		<title>Cadastro</title>
+		<title>Register User</title>
 		<meta charset="utf-8"/>
 	</head>
 
 	<body>
 		<form method="POST"action="RegisterUser.php">
-			<label>Nome:</label>
-			<input type="text" name="nome"/> <br/>
+			<label>Name:</label>
+			<input type="text" name="name"/> <br/>
 
-			<label>Sobrenome:</label>
-			<input type="text" name="sobrenome"/> <br/>
+			<label>Last Name:</label>
+			<input type="text" name="lastname"/> <br/>
 
-			<label>Idade:</label>
-			<input type="text" name="idade"/> <br/>
+			<label>Age:</label>
+			<input type="text" name="age"/> <br/>
 
-			<button type="submit">Cadastrar</button>
+			<label>Email:</label>
+			<input type="email" name="email"/> <br/>
+
+			<button type="submit">Register</button>
 		</form>
 	</body>
 </html>
